--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Unsplash gallery</string>
+    <string name="load_error"> Loading error</string>
 </resources>
